[metadata]
name = nol-pkg-numberoutloud
version = 0.0.1
author = Akbar Hussain
author_email = numberoutloud@gmail.com
description = Python library to translate any number to words in multiple langauges
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/numberoutloud/nol-python
project_urls =
    Bug Tracker = https://github.com/numberoutloud/nol-python/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
